# bluemonitor-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bluemonitor_cli.py  check_environment.py  debug.py  docker-compose.yml  fix.py  install_cli.py  pyproject.toml  pyproject.toml.backup  railway.json  run.py  run_clustering.py  run_coverage.py  run_news_collector.py  run_tests.sh  test_embedding.py  test_news_collector.py  verify_usage.sh
.github/workflows/: issues-from-md.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py  utils.py
app/api/v1/endpoints/: __init__.py  categories.py  health.py  news.py  tasks.py  topics.py
app/core/: cache.py  config.py  database.py  logging.py  scheduler.py  utils.py
app/middleware/: __init__.py  task_cleanup.py
app/schemas/: navigation.py  news.py  topics.py
app/services/: __init__.py  task_manager.py  web_scraper.py
app/services/ai/: __init__.py  fact_extraction.py  navigation.py  processor.py  topic_cluster.py  topic_cluster.py.bak  topic_cluster_updated.py
app/services/ai/classification/: __init__.py  active_learning.py  advanced_classifier.py  false_positive_reducer.py
app/services/ai/hierarchical/: __init__.py  scalable_architecture.py
app/services/news/: __init__.py  collector.py  validator.py
app/services/processing/: __init__.py  batch_processor.py  batch_processor_backup.py  cache_manager.py  resource_monitor.py
app/tasks/: __init__.py  scheduled_tasks.py
config/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
deployment/docker/: docker-compose.prod.yml
docs/: CLI_README.md  DEPLOY.md  NEWS_ENHANCEMENTS.md  README.md
docs/issues/: ISSUE_list_topics_import.md  ISSUE_mongodb_required_for_tests.md  ISSUE_mongodb_test_env.md
scripts/: __init__.py  __main__.py  check_article_ids.py  check_clustering_health.py  check_news.py  check_topic.py  check_topic_articles.py  check_topics.py  check_topics_final.py  clean_and_recluster.py  clean_invalid_articles.py  clear_database.py  fix_article_ids.py  fix_inconsistencies.py  fix_topic_articles.py  list_topics.py  reset_clustering.py  reset_database.py  run_news_collector.py  test_classification.py  test_new_categories.py  test_news_collection.py  test_news_collector.py  test_news_pipeline.py  test_real_news_classification.py  test_violence_classification.py  verify_articles.py  view_topics.py
scripts/diagnostics/: __init__.py  check_environment.py  check_news.py  check_topics.py  count_news.py
scripts/execution/: install_cli.py  run.py  run_clustering.py  run_coverage.py  run_news_collector.py  run_tests.sh
tests/: README.md  __init__.py  conftest.py  conftest_task.py  test_task_cleanup_middleware.py  test_task_manager.py
tests/api/v1/: test_health.py  test_tasks.py
tests/api/v1/endpoints/: test_health.py  test_news.py  test_news_async.py  test_tasks.py  test_tasks_fixed.py  test_topics.py
tests/integration/: __init__.py  test_task_cleanup_integration.py
tests/unit/: test_news_helpers.py
tests/unit/services/ai/: __init__.py  test_processor.py  test_topic_cluster.py  test_topic_cluster_helpers.py
tests/unit/services/news/: __init__.py  test_collector.py
venv311/: pyvenv.cfg
