[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bluemonitor"
version = "0.1.0"
description = "Backend service for BlueMonitor - A platform for tracking autism-related news in Brazil"
authors = ["BlueMonitor Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
motor = "^3.3.2"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"

# AI and ML
transformers = "^4.35.0"  # Ainda usado para sumarização
torch = "^2.1.0"  # Necessário para transformers
sentence-transformers = "^2.2.2"  # Usado para geração de embeddings
scikit-learn = "^1.3.0"  # Usado para clustering
numpy = "^1.24.0"  # Dependência básica para ML
protobuf = ">=4.0.0,<5.0.0"  # Dependência do TensorFlow/Transformers

# Scheduler
apscheduler = "^3.10.4"

# Text processing
spacy = "^3.7.0"  # Pode ser usado para processamento de texto
structlog = "^25.3.0"  # Usado para logging estruturado

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true